batch alignment fix

--- a/src/app/main/side-nav/apps/apps.component.scss
+++ b/src/app/main/side-nav/apps/apps.component.scss
@@ -40,15 +40,15 @@
 .right i {
     font-weight: 500;
     display: hidden;
+    font-size: 18px;
+
 }
 .right i:hover {
     color: white;
     background-color: rgb(192, 192, 192,.5);
 }
 
-.fa-plus {
-    font-size: 20px;
-}
+
 a {
     padding-left: 30px;
     color: #B7A5B7;
