--- a/src/app/main/side-nav/channels/channels.component.scss
+++ b/src/app/main/side-nav/channels/channels.component.scss
@@ -48,16 +48,14 @@
     visibility: hidden;
 }
 .right i {
-    font-weight: 500;
+    font-weight: 400;
+    font-size: 18px;
 }
 .right i:hover {
     color: white;
     background-color: rgb(192, 192, 192,.2);
 }
 
-.fa-plus {
-    font-size: 20px;
-}
 a {
     padding-left: 30px;
     text-decoration: none;
