--- a/src/app/main/side-nav/direct-messages/direct-messages.component.scss
+++ b/src/app/main/side-nav/direct-messages/direct-messages.component.scss
@@ -47,15 +47,13 @@
 .right i {
     font-weight: 500;
     display: hidden;
+    font-size: 18px;
 }
 .right i:hover {
     color: white;
     background-color: rgb(192, 192, 192,.2);
 }
 
-.fa-plus {
-    font-size: 20px;
-}
 a {
     padding-left: 30px;
     text-decoration: none;
